# proyecto-final/src/routes/index.js
@@ -1,18 +1,18 @@
 const express = require('express');
 
 const { rootController } = require('../controllers');
-const notasRouter = require('./notitas');
-const { showNotes } = require('../controllers/notitas');
+const { getUsers } = require('../controllers/user');
 const smtpController = require('../controllers/smtp');
 const userRouter = require('./user');
+const ordenadorRouter = require('./ordenador');
 
 const router = express.Router();
 
-router.post('/', rootController);
-router.use('/notas', notasRouter);
-router.get('/notas', showNotes);
+router.post('/', rootController);;
+router.get('/user', getUsers);
 router.post('/mail', smtpController.createMail);
 router.use('/user', userRouter);
+router.use('/ordenador', ordenadorRouter);
 
 
 module.exports = router;
