# proyecto-final/src/routes/ordenador.js
@@ -1,0 +1,11 @@
+const express = require('express');
+
+const { createOrdenador, getOrdenadores} = require('../controllers/ordenador');
+
+const router = express.Router();
+
+router.get('/',getOrdenadores);
+router.post('', createOrdenador);
+
+
+module.exports = router;
